[package]
name = "tokio-tun"
version = "0.1.0"
authors = ["hankbao <hankbao84@gmail.com>"]
edition = "2018"

[lib]
name = "tokio_tun"
path = "src/lib.rs"

[dependencies]
ipnetwork = "0.14"
byteorder = "1.3"
bytes = "0.4"
futures = "0.1"
mio = { git = "https://github.com/hankbao/mio.git", branch = "v0.6.x-windows" }
tokio = { git = "https://github.com/hankbao/tokio.git", branch = "v0.1.x-windows" }

[target.'not(cfg(windows))'.dependencies]
nix = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { git = "https://github.com/hankbao/winapi-rs.git", branch = "iphlpapi-support" }
mio-wintun = { git = "https://github.com/hankbao/mio-wintun.git", branch = "custom" }
