[package]
name = "tokio-tun"
version = "0.1.0"
authors = ["hankbao <hankbao84@gmail.com>"]
edition = "2018"

[lib]
name = "tokio_tun"
path = "src/lib.rs"

[dependencies]
ipnetwork = "0.14"
byteorder = "1.3"
bytes = "0.4"
futures = "0.1"
mio = "0.6"
tokio = "0.1"

[target.'cfg(not(windows))'.dependencies]
nix = "0.9"

[target.'cfg(windows)'.dependencies]
winapi = { git = "https://github.com/hankbao/winapi-rs.git", branch = "iphlpapi-support" }
mio-wintun = { git = "https://github.com/hankbao/mio-wintun", branch = "master" }
